Fixed navigation layout issue on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -104,7 +104,7 @@ body {
 }
 
 .content-wrapper {
-  padding: 50px;
+  padding: 50px 30px;
 }
 
 h1 {
@@ -144,7 +144,7 @@ img {
 h3 {
   text-align: center;
   font-weight: 700;
-  font-size: 2rem; 
+  font-size: 1.5rem; 
   margin: 0px 0 40px 0;
 }
 
@@ -166,7 +166,7 @@ p span {
 /******* MOBILE STYLES ******/
 
 header {
-  background: url('/img/background-clipping-mask.jpg') no-repeat center center fixed #f0da12;
+  background: url("img/background-clipping-mask.jpg") no-repeat center center fixed #f0da12;
 }
 
 .fixed-nav-bar {
@@ -181,8 +181,9 @@ header {
 nav ul {
   text-transform: uppercase;
   font-weight: 700;
+  font-size: .8rem;
   list-style: none;
-  margin: 10px 0 60px;
+  margin: 10px 10px 60px;
   padding: 0 10px;
   display: flex;
   align-items: center;
@@ -190,7 +191,7 @@ nav ul {
 }
 
 .nav__item {
-  padding-right: 30px;
+  padding-right: 17px;
 }
 
 .nav__link {
@@ -199,6 +200,10 @@ nav ul {
   border-radius: 100px;
   padding: .25rem 1rem;
   width: max-content;
+}
+
+.nav__link:visited {
+  background: white;
 }
 
 .nav__link:hover {
@@ -233,11 +238,17 @@ nav ul {
   margin: 35px 0 50px;
 }
 
+.vertical-center a:visited {
+  background: #f0da12;
+}
+
 .vertical-center a:hover {
   background: #faf2b5;
   color: #303030;
   border: none;
 }
+
+
 
 .btn {
   background: #f0da12;
@@ -342,7 +353,7 @@ a:hover {
 .copyright {
   text-align: center;
   margin: 60px 0;
-  font-size: 1rem;
+  font-size: .875rem;
 }
 
 
@@ -502,6 +513,7 @@ a:hover {
     width: 40%;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     padding-bottom: 70px;
   }
 
